Add JavaClass.isRecord() to domain
Building ArchUnit tests now requires to compile and run tests against Records [1]. This preview feature was introduced with JDK 14, but classes compiled with JDK 14 with preview feature enabled cannot be run with Java 15 with preview feature enabled. To simplify the build we will only test the latest JDK until we reach JDK 16 where Records should finally become stable.

An alternative would be to use Gradle's "Toolchains for JVM projects" feature to decouple the JDK that is used to run Gradle from the JDK that is used to compile/test the code. [2]

[1] https://openjdk.java.net/jeps/359
[2] https://github.com/TNG/ArchUnit/issues/477

Signed-off-by: Roland Weisleder <roland.weisleder@googlemail.com>
Signed-off-by: Peter Gafert <peter.gafert@tngtech.com>