@@ -47,6 +47,7 @@ configureSlowTestsFor this
 
 def jdk9MainDirs = ['src/jdk9main/java']
 def jdk9TestDirs = ['src/jdk9test/java']
+def jdk15TestDirs = ['src/jdk15test/java']
 sourceSets {
     jdk9main {
         java {
@@ -60,6 +61,12 @@ sourceSets {
         }
         compileClasspath += sourceSets.test.compileClasspath
     }
+    jdk15test {
+        java {
+            srcDirs = jdk15TestDirs
+        }
+        compileClasspath += sourceSets.test.compileClasspath
+    }
 }
 
 dependencies {
@@ -67,6 +74,8 @@ dependencies {
     jdk9testImplementation sourceSets.test.output
     jdk9testImplementation sourceSets.test.compileClasspath
     jdk9testImplementation sourceSets.jdk9main.output
+    jdk15testImplementation sourceSets.test.output
+    jdk15testImplementation sourceSets.test.compileClasspath
 
     runtimeOnly sourceSets.jdk9main.output
 }
@@ -83,24 +92,42 @@ compileJdk9testJava.with {
     targetCompatibility = JavaVersion.VERSION_1_9
 }
 
+compileJdk15testJava.with {
+    sourceCompatibility = JavaVersion.VERSION_15
+    targetCompatibility = JavaVersion.VERSION_15
+
+    options.compilerArgs += '--enable-preview'
+}
+
 task jdk9Test(type: Test) {
     testClassesDirs = sourceSets.jdk9test.output.classesDirs
     classpath = sourceSets.jdk9test.runtimeClasspath
 }
 
+task jdk15Test(type: Test) {
+    testClassesDirs = sourceSets.jdk15test.output.classesDirs
+    classpath = sourceSets.jdk15test.runtimeClasspath
+    jvmArgs += "--enable-preview"
+
+    // workaround for issue in Gradle 6.7, see https://github.com/gradle/gradle/issues/14714
+    exclude '**/ClassFileImporterRecordsTest\$*RecordToImport.class'
+}
+
 [jar, test]*.dependsOn compileJdk9mainJava
 
-[test, jdk9Test].each { testTask ->
+[test, jdk9Test, jdk15Test].each { testTask ->
     addMultiJdkTestsFor project, testTask
 }
-test.finalizedBy(jdk9Test)
+test.finalizedBy(jdk9Test, jdk15Test)
 
-spotbugsJdk9test.enabled = false
+[spotbugsJdk9test, spotbugsJdk15test]*.enabled = false
 
 idea {
     module {
         sourceDirs += jdk9MainDirs.collect { file(it) }
         sourceDirs -= jdk9TestDirs.collect { file(it) }
+        sourceDirs -= jdk15TestDirs.collect { file(it) }
         testSourceDirs += jdk9TestDirs.collect { file(it) }
+        testSourceDirs += jdk15TestDirs.collect { file(it) }
     }
 }
